tests/NormalTests/paczka1/small_fuzzy/62292996.err
Error in line 1: XokB6 S922 81,1
Error in line 3: XokB6 S976 57,6
Error in line 8: Hntr S976 82,5
